<resources>
    <string name="recycleview">Recycle View</string>
    <string name="aboutme">About Me</string>
    <string name="masterDetail">Master Detail</string>

    <string name="help1">Help</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="action_search">Search</string>
    <string name="app_name">247Stock</string>
    <string name="inventoryAvailable">Available</string>
    <string name="deliveryPending">Delivery Pending</string>
    <string name="notOrdered">No Supply No Order</string>
    <string name="orderedNotDelivered">Ordered but not delivered</string>
    <string name="createAccount">Create Account</string>
    <string name="passwordPrompt">Please enter your password</string>
    <string name="accountAlready">Login</string>
    <string name="login">Login Here</string>
    <string name="viewPager">ViewPager Activity</string>
    <string name="recycleView">RecyleView Activity</string>

    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="delete">Delete</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MapYouTubeAPI_TestApp</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleMainActivity">247stock</string>
    <string name="toolBarSize">60dp</string>

    <string name="first_name_prompt">Name:</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="about_headline">Company History</string>
    <string name="about_text">About listView</string>
    <string name="title_activity_about">About 247 App</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="snackbar_action">Replace with your own action</string>
    <string name="action">Action</string>
    <string name="imagetype">.png</string>
    <string name="list_view">List View</string>
    <string name="select_settings">You selected settings</string>
    <string name="select_cart">You selected the Shopping Cart</string>
    <string name="select_logout">You selected Logout</string>
    <string name="flip_view">Flip View</string>
    <string name="greeting">Greetings</string>
    <string name="marker_title">marker title</string>
    <string name="main_orientation_toast">"Your orientation is portrait"</string>
    <string name="main_landscape_orientation_toast">Your orientation is landscape</string>
    <string name="fragment_item">Fragment Item</string>
    <string name="Trash">Delete</string>
    <string name="addition_info">Please send some information!</string>
    <string name="request_info">Information request</string>
    <string name="mail_to">mailto:</string>
    <string name="selected_settings">You selected settings</string>
    <string name="set_Action">Action</string>
    <string name="snackbar_coordinatorlayout">You selected the Shopping Cart</string>
    <string name="selected_logout">You selected Logout</string>
    <string name="android_studio">Android Studio</string>
    <string name="course">CIS 600 Spring 2016</string>
    <string name="fab_statement">Need Help Call 212-810-1609</string>

</resources>
