<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/green_share"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="never"/>

    <item android:id="@+id/trash_can"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:showAsAction="never"
        android:icon="@drawable/trashcan"
        android:title="@string/Trash" />

    <item android:id="@+id/fragment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/fragment"
        android:title="@string/fragment_item"
        app:showAsAction="ifRoom"/>

</menu>