<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/bluetooth"
        android:orderInCategory="101"
        android:title="Blue Tooth"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_web"
        android:orderInCategory="102"
        android:title="On the web"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/green_share"
        android:orderInCategory="0"
        android:title="Share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/help"
        android:title="@string/help1"
        app:showAsAction="never" />
</menu>
