<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#c8e6c9">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/createAccount"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#2d7d32" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E8F5E9"
        android:hint="@string/passwordPrompt"
        android:paddingBottom="15dp"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="#1B5E20"
        android:textColorHint="#AEAEAE"
        android:textSize="15.3sp"
        android:layout_below="@+id/edit_text_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:background="#E8F5E9"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/edit_text_password"
        android:padding="14dp"
        android:textColor="#1B5E20"
        android:textColorHint="#AEAEAE"
        android:textSize="15.3sp"
        android:layout_below="@+id/createAccount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/button"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_centerVertical="true"
        android:background="#4CAF50" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountAlready"
        android:textSize="20dp"
        android:id="@+id/loginTV"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:textColor="#1B5E20" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/loginTV"
        android:background="#4CAF50" />

</RelativeLayout>